kubernetes/microblog-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
  labels:
    app: microblog
spec:
  selector:
    app: microblog
  ports:
    - port: 5000
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
        - name: microblog
          image: moau17/microblog-kubernetes:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
